# flying-dragon

./: Cargo.toml  README.md  build-run-web.sh
src/: app.rs  lib.rs  main.rs
src/assets/: dragon-low.gltf
src/geometry/: mesh.rs
src/material/: mod.rs  shader-displaced.wgsl  shader.rs  shader_dragon.rs  shader_dragon.wgsl  shader_lit.rs  shader_lit.wgsl  shader_unlit.rs  shader_unlit.wgsl
src/world/: camera.rs  light.rs  mod.rs  node.rs  renderer.rs
web/: index.html
