[package]
name = "flying-dragon"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "^0.18"
bytemuck = { version = "1.12", features = [ "derive" ] }
pollster = "0.3.0"
glam = "0.24.2"
tobj = "4.0.0"
splines = { version = "4.3.1", features = [ "glam" ] }
