[package]
name = "flying-dragon"
version = "0.3.1"
edition = "2021"

[dependencies]
winit = "0.30.4"
env_logger = "0.10"
log = "0.4"
wgpu = "^22.0.0"
bytemuck = { version = "1.12", features = ["derive"] }
pollster = "0.3.0"
glam = { version = "0.24.2", features = ["bytemuck"] }
tobj = "4.0.0"
splines = { version = "4.3.1", features = ["glam"] }
